# cardgame

./: Cargo.toml  README.md
.github/workflows/: github-ci.yml
doc/: README.html
src/: card.rs  frenchcard.rs  lib.rs  main.rs  spotitcard.rs
