[package]
name = "cardgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
rand = "0.8.4"
itertools = "0.10.3"
prime-checker = "0.2.21"
fraction = "0.13.1"

